# portfolio-plan

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml
docs/source/: conf.py  gettingstarted.md  index.rst  jupyter_kernel.py
docs/source/api/: financialseries.md  index.md  plan.md  ratios.md  resource.rst  utils.md  visualisation.md
docs/source/userguide/: index.md
portfolio_plan/: __init__.py  _properties.py  abc.py  const.py  core.py  errors.py  financialseries.py  prettyprint.py  ratios.py  resource.py  utils.py  visualisation.py
portfolio_plan/data/: __init__.py  _utils.py  mock.parquet  mock_cumulative_returns.parquet  mock_example.parquet  mock_returns.parquet
tests/: test_core.py  test_prices.py  test_returns.py  test_utils.py
